# enterprise-mcp-bridge

./: .coveragerc  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE.md  README.md  README_WORKFLOW_ADDITIONS.md  conftest.py  release.sh  render.yaml  start.sh
app/: conftest.py  models.py  pyproject.toml  routes.py  server.py  test_app.py  test_fastapi_with_testclient.py  test_map_tools.py  test_routes_elicitation.py  test_routes_http_status_passthrough.py  test_token_cookie.py  test_tool_output_schema.py  test_vars.py  vars.py
app/app_facade/: conversational_service.py  env_utils.py  gateway_explorer.py  generated_dummy_data.py  generated_output_factory.py  generated_phase1.py  generated_phase2.py  generated_schemas.py  generated_service.py  generated_storage.py  generated_types.py  generation_pipeline.py  pfusch_ui_phase2_prompt.md  pfusch_ui_prompt.md  prompt_helpers.py  route.py  schemas.py  test_explore_tools.py  test_fix_tools.py  test_generated_conversational_routes.py  test_generated_conversational_service.py  test_generated_dashboards.py  test_generated_dummy_data.py  test_generated_service.py  test_generated_storage_sessions.py  test_generated_ui.py  test_phase1_payload.py  test_phase2_payload.py  test_route.py  test_runner_service.py  test_test_fix_tools.py  test_test_fix_tools_extended.py  tool_sampling.py
app/app_proxy/: README.md  __init__.py  route.py  test_route.py
app/elicitation/: __init__.py  coordinator.py  test_coordinator.py
app/json/: schema_validation.py
app/mcp_server/: __init__.py  server_params.py  test_server_params.py
app/oauth/: decorator.py  test_decorator.py  test_token_dependency.py  test_token_exchange.py  test_user_info_group_access.py  token_dependency.py  token_exchange.py  user_info.py
app/session/: __init__.py  client_strategy.py  session.py  test_client_strategy.py  test_session.py
app/session_manager/: __init__.py  prompt_helper.py  session_context.py  session_manager.py  test_header_mapping.py  test_map_tools.py  test_prompt_helper.py  test_session_context.py
app/sse/: __init__.py  mcp_proxy.py  routes.py  streaming.py  test_mcp_proxy.py  test_routes.py  test_streaming.py
app/tgi/: __init__.py  chunk_reader.py  context_compressor.py  llm_client.py  model_formats.py  models.py  prompt_service.py  proxied_tgi_service.py  routes.py  service.py  test_chunk_reader.py  test_context_compressor.py  test_llm_client.py  test_model_formats.py  test_prompt_service.py  test_prompt_service_additional.py  test_proxied_tgi_service.py  test_proxied_tgi_service_refactored.py  test_proxied_tgi_service_streaming.py  test_read_todo_stream.py  test_routes.py  test_tgi.py  test_tgi_background_routes.py  test_tgi_routes.py  test_think_helper.py  test_todo_manager.py  test_tool_argument_fixer_service.py  test_tool_resolution.py  test_tool_service.py  test_tools_map.py  test_well_planned.py  test_well_planned_orchestrator_select_tools.py  think_helper.py  todo_manager.py  tool_resolution.py  (+4 more)
(+220 files in other folders)
