[project]
name = "mcp-rest-server"
version = "0.1.0"
description = "Wrapper for MCP Clients to be called via REST on a plaform"
authors = [{ name = "Matthias Kainer", email = "mail@matthias-kainer.de" }]
requires-python = ">=3.10"
dependencies = ["httpx", "fastapi", "uvicorn", "mcp[cli]", "celery"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pyjwt",
    "requests"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# Include the top-level package and all subpackages under app/ as part of the distribution
packages = [
    "app",
    "app.session",
    "app.session_manager",
    "app.oauth",
    "app.mcp_server",
]